Fixed body overflow

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -307,6 +307,7 @@
 
     section {
         width: 100%;
+        overflow-x: hidden;
     }
 
     .font-sm {
